2005-06-11 Pierrick LE GALL

	* errors and informations boxes : management centralized in
	admin.php, $errors and $infos arrays replaced by $page['errors']
	and $page['infos'], special management for admin/update.php (more
	complex management)

2005-06-11 Pierrick LE GALL

	* bug 96 (informations given by uploaders are lost) correction
	reported from branch 1.4

2005-05-10 Pierrick LE GALL

	* user list : links to profile page and permissions page are
	represented by icons (more compact)

	* user list : ability to associate to a group or to dissociate
	from a group a list of selected users

	* user list : ability to set user properties in "batch" mode (a
	selection of users at once)

	* user list : alternate background color for each line
	
2005-04-30 Pierrick LE GALL

	* user list updated : ability to filter list on status. Function
	get_enums comes back to retrieve the list of possible status in
	the database.
	
2005-04-28 Pierrick LE GALL

	* user list updated : ability to filter list on group

2005-04-25 Pierrick LE GALL

	* include/config.inc.php becomes include/config_default.inc.php :
	this file should not be modified. A new file
	include/config_local.inc.php can be used for overwriting
	configuration parameters
	
2005-04-25 Pierrick LE GALL

	* come back to previous version of include/constants.php :
	%PWGVERSION% was not a mistake

2005-04-25 Pierrick LE GALL

	* profile.php is no longer used for listing users :
	admin/user_list.php comes back (as in 1.3 branch)

	* user list updated : ability to filter list on username

2005-04-25 Gweltas

	* ability to install even if file include/mysql.inc.php doesn't
	exist

	* monthly statistics

	* installation labels updated (english only)

2005-04-16 Pierrick LE GALL <pierrick /at/ phpwebgallery {dot} net>

	* elements batch management : element_set page becomes the
	frontend to element_set_global and element_set_unit, infos_images
	(after a long time of use) become deprecated : the more powerful